--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ instagram_log.txt
 clientID.txt
 subscribe_tag.sh
 *.sqlite
+fotos.sqlite.0116
+fotos.sqlite.0924
+fotos.sqlite.antesde1103
+css/vinheta.css
+myssh.tcl
+vinheta.php
